--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,10 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>2.9.2</version> <!-- ou uma versão mais recente -->
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
 
 	</dependencies>
 
