--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=FakeApiProduto
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.url=jdbc:postgresql://localhost:5432/ApifakeProduto
+spring.datasource.username=postgres
+spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
@@ -11,3 +11,10 @@ server.address=0.0.0.0
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/swagger-ui.html
+
+
+# Expor todos os endpoints do Actuator
+management.endpoints.web.exposure.include=*
+
+# Habilitar a API OpenAPI do SpringDoc para incluir os endpoints do Actuator
+springdoc.show-actuator=true
